--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "html-webpack-plugin": "^3.2.0",
     "terser-webpack-plugin": "^2.3.5",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
